--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.4",
     "jquery": "^3.4.1",
     "vue": "^2.6.11",
+    "vue-owl-carousel": "^2.0.3",
     "vue-router": "^3.1.5"
   },
   "devDependencies": {
